tests/mm0_mmu/fail/bad-math-string3.mm0
--               --V two $ too many
delimiter $ $ $ $ $ $ ;
